--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,10 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+		<link rel="icon" href="%PUBLIC_URL%/favicon-white.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="Проект Meteolis" content="Всё для метеоролога" />
-		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+		<link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 		<title>Проект Meteolis</title>
 	</head>
